--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
+    "@ngrx/store": "^18.0.0",
     "@nx/angular": "19.3.0",
+    "phaser": "^3.80.1",
+    "primeng": "^17.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
