feat: added shell, added start script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@sword-soldiers/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve sword-soldiers"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.0.0",
