--- a/libs/ui/.eslintrc.json
+++ b/libs/ui/.eslintrc.json
@@ -13,7 +13,6 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "lib",
             "style": "camelCase"
           }
         ],
@@ -21,7 +20,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "lib",
+            "prefix": "ui",
             "style": "kebab-case"
           }
         ]
