--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve sword-soldiers"
+    "start": "nx serve sword-soldiers --proxy-config=proxy-dev.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -15,9 +15,12 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
-    "@ngrx/store": "^18.0.0",
+    "@auth0/auth0-angular": "^2.2.3",
+    "@ngrx/signals": "^18.0.0-beta.1",
     "@nx/angular": "19.3.0",
+    "normalize.css": "^8.0.1",
     "phaser": "^3.80.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
