feat: added user profile, extracted environment variables

--- a/apps/sword-soldiers/project.json
+++ b/apps/sword-soldiers/project.json
@@ -7,13 +7,17 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "executor": "@ngx-env/builder:application",
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/sword-soldiers",
         "index": "apps/sword-soldiers/src/index.html",
         "browser": "apps/sword-soldiers/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/sword-soldiers/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -53,10 +57,11 @@
           "sourceMap": true
         }
       },
+
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
+      "executor": "@ngx-env/builder:dev-server",
       "configurations": {
         "production": {
           "buildTarget": "sword-soldiers:build:production"
@@ -68,7 +73,7 @@
       "defaultConfiguration": "development"
     },
     "extract-i18n": {
-      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "executor": "@ngx-env/builder:extract-i18n",
       "options": {
         "buildTarget": "sword-soldiers:build"
       }
@@ -77,8 +82,10 @@
       "executor": "@nx/eslint:lint"
     },
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "executor": "@ngx-env/builder:karma",
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/sword-soldiers/jest.config.ts"
       }
