--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@auth0/auth0-angular": "^2.2.3",
     "@ngrx/signals": "^18.0.0-beta.1",
     "@nx/angular": "19.3.0",
+    "@primeng/themes": "^18.0.0",
     "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "phaser": "^3.80.1",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.1",
+    "primeng": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
