--- a/libs/users/features/users-user-profile-feature/.eslintrc.json
+++ b/libs/users/features/users-user-profile-feature/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "lib",
+            "prefix": "feature",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "lib",
+            "prefix": "feature",
             "style": "kebab-case"
           }
         ]
